[metadata]
version = 0.0.5
name = loadconfig
summary = Tool to simplify config management in a program.
description-file =
    README.rst
author = Daniel Mizyrycki
author_email = mzdaniel@glidelink.net
home-page = https://loadconfig.readthedocs.org
download_url = https://github.com/loadconfig
keywords =
    config
    odict
    yaml
    clg
    command-line
    argparse
license = MIT License
classifier =
    Development Status :: 4 - Beta
    Environment :: Linux
    Operating System :: Linux
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Topic :: Utilities
    Topic :: Software Development :: Libraries :: Python Modules
platform = Linux

[files]
packages = loadconfig
scripts = scripts/loadconfig

[bdist_wheel]
universal = 1
